--- a/style.css
+++ b/style.css
@@ -15,3 +15,231 @@
   box-sizing: border-box;
   word-wrap: break-word;
 }
+body,
+body:not(.has-background-image) {
+  background-image:none;
+  background-color:#d7dadb;
+  color:#23282b;
+}
+main section {
+  background-color:#fff;
+  margin-top:30px;
+}
+main section:first-child {
+  margin-top:0;
+}
+.main-header {
+  background-color:#fff;
+}
+.main-header sub,
+.main-header sup,
+.main-header sup a {
+  color:#23282b;
+  font-size:32px;
+  font-weight:300;
+}
+.main-header sup a:hover {
+  color:#981e32;
+}
+.main-header sub *,
+.main-header sub a {
+  display:none;
+}
+main section.no-margin,
+header.main-header + section {
+  margin-top:0;
+}
+hr {
+	background-color: rgba(0,0,0,.1);
+  margin-top:2em;
+  margin-bottom:2em;
+}
+/*******************
+  Typography
+*******************/
+h2 {
+  font-size:24px;
+  font-weight:400;
+  padding:1.6em 0;
+}
+h5 {
+  font-weight:600;
+  padding-bottom:1.2em;
+  font-size:1.1rem;
+}
+main p,
+main ol,
+main ul {
+  font-weight:300;
+  font-size:1rem;
+  line-height:1.6;
+  padding-bottom:1.5em;
+}
+main ul li {
+  list-style:circle;
+  padding-bottom:1em;
+}
+/*******************
+  Content Syndicate
+*******************/
+.wsuwp-content-syndicate-wrapper {
+  counter-reset: section;
+}
+.wsuwp-content-syndicate-wrapper ul {
+  padding-left:45px;
+}
+.wsuwp-content-syndicate-wrapper ul li {
+  list-style:none;
+  border-bottom:1px solid #d9d9d9;
+  padding:2em 0;
+}
+.wsuwp-content-syndicate-wrapper ul li:first-child {
+  padding-top:0;
+}
+.wsuwp-content-syndicate-wrapper ul li:last-child {
+  border-bottom:0;
+}
+.wsuwp-content-syndicate-wrapper ul li:before {
+  position:absolute;
+  left:68px;
+  width:20px;
+  text-align:center;
+  counter-increment: section;
+  content: counter(section);
+  padding:.2em;
+  font-size:.8rem;
+  border:1px solid #23282b;
+  border-radius:50%;
+}
+.content-item-byline-author {
+  display:none;
+}
+.content-item-title,
+.content-item-byline {
+  font-weight:600;
+  margin-bottom:.7em;
+}
+.content-item-excerpt {
+  margin-top:.8em;
+  display:block;
+}
+/*******************
+  Notifications
+*******************/
+.notifications {
+    counter-reset: notifications;
+}
+ul.notifications  {
+  column-count:2;
+  column-gap: 20px;
+  margin-top:2em;
+}
+ul.notifications li {
+  list-style:none;
+  padding-bottom:3em;
+}
+ul.notifications li:before {
+  display: inline-block;
+  width:20px;
+  text-align:center;
+  vertical-align:middle;
+  counter-increment: notifications;
+  content: counter(notifications);
+  padding:.2em;
+  margin-right:.8em;
+  font-size:.8rem;
+  border:1px solid #23282b;
+  border-radius:50%;
+}
+/*******************
+  Dial 911
+*******************/
+.dial-911 .dial {
+  display:flex;
+  width:100%;
+  height:60px;
+  padding-bottom:1em;
+}
+.dial-911 .dial img,
+.dial-911 .dial h2 {
+  display:inline-flex;
+}
+.dial-911 .dial img {
+  width:47px;
+  height:47px;
+  margin-right:.8em;
+}
+.dial-911 .dial h2 {
+  font-weight:600;
+  font-size:2rem;
+  line-height: .4;
+  padding-top:.5em;
+}
+.dial-911 em {
+  font-size:.9em;
+}
+/*******************
+  Accordion
+*******************/
+.ui-accordion {
+    height:100%;
+    padding-bottom:2em;
+}
+.ui-accordion div.accordion-content {
+  padding-top:.8em;
+}
+.ui-accordion h4 {
+  cursor: pointer;
+  font-size:1.2rem;
+  font-weight:400;
+  outline:0;
+}
+.ui-accordion h4.ui-state-default:before {
+  content:"+";
+}
+.ui-accordion h4.ui-state-active:before  {
+  content:"-";
+}
+.ui-accordion h4.ui-state-default:before,
+.ui-accordion h4.ui-state-active:before {
+  font-size:.8rem;
+  font-weight:300;
+  border:1px solid #981e32;
+  border-radius:50%;
+  padding:.2em;
+  display: inline-block;
+  width:20px;
+  text-align:center;
+  vertical-align:middle;
+  margin-right:10px;
+  color:#981e32;
+}
+/*******************
+  Examples
+*******************/
+.examples {
+  padding-bottom:2em;
+}
+.examples p {
+  padding-bottom:1em;
+}
+/*******************
+  Media Query
+*******************/
+@media screen and (max-width: 990px) {
+  main ol,
+  main ul {
+    padding-left:0;
+    padding-right:0;
+  }
+  ul.notifications  {
+    column-count:1;
+  }
+  ul.notifications li:before,
+  .ui-accordion h4.ui-state-default:before,
+  .ui-accordion h4.ui-state-active:before {
+    position:absolute;
+    display:block;
+    left:25px;
+  }
+}
