--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ main ul li {
   padding-bottom:1em;
 }
 /************************
-  Notificvation System
+  Notification System
 *************************/
 .notifications-wrap {
   width:100%;
@@ -215,6 +215,19 @@ ul.notifications li:before {
   font-size:.8rem;
   border:1px solid #23282b;
   border-radius:50%;
+}
+.showTip {
+  font-size: .9em;
+  border: 1px solid #981e32;
+  border-radius: 50%;
+  padding: .3em;
+  display: inline-block;
+  width: 20px;
+  text-align: center;
+  height: 20px;
+  vertical-align: text-top;
+  line-height: .9;
+  margin-left:.5em;
 }
 /*******************
   Dial 911
