--- a/css/00-banner.css
+++ b/css/00-banner.css
@@ -1,9 +1,9 @@
 /*
  Theme Name:     WSU Alert
- Theme URI:      https://web.wsu.edu/
+ Theme URI:      https://github.com/washingtonstateuniversity/alert.wsu.edu/
  Description:    A child theme for Washington State University's Spine framework
- Author:         WSU University Communications
- Author URI:     https://ucomm.wsu.edu/
+ Author:         WSU Web Communication
+ Author URI:     https://web.wsu.edu/
  Template:       spine
- Version:        0.0.7
+ Version:        0.1.0
 */
