Refactor alert header

--- a/css/style.css
+++ b/css/style.css
@@ -91,64 +91,48 @@ main ul li {
 .notifications-wrap {
 	width: 100%;
 	display: block;
-	color: #fff;
+	color: #2e2e2e;
 }
 
 .notifications-wrap .crimson-title {
 	width: 100%;
-	text-align: center;
 	background-color: #981e32;
-	padding: .8em 0;
+	padding: .8em 2rem;
 }
 
 .notifications-wrap .crimson-title header {
 	font-size: 1rem;
-	text-transform: uppercase;
+	color: #fff;
 }
 
 .notifications-wrap .system-announcement-wrapper {
-	width: 100%;
+	width: auto;
 	min-height: 200px;
-	padding: 3em 0;
+	padding: 2rem;
+	margin: 0 -2rem;
+	border-bottom: 3px solid rgba(0, 0, 0, 0.1);
+}
+
+.notifications-wrap .system-announcement-wrapper:last-child {
+	border-bottom: none;
 }
 
 .notifications-wrap .system-announcement-wrapper.clear {
-
-	/* Gradient via http://colorzilla.com/gradient-editor/#aca301+0,9b8d1f+100 */
-	background: rgb(172, 163, 1); /* Old browsers */ /* FF3.6-15 */
-	background: linear-gradient(135deg, rgba(172, 163, 1, 1) 0%, rgba(155, 141, 31, 1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	/* stylelint-disable */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#aca301", endColorstr="#9b8d1f", GradientType=1); /* IE6-9 fallback on horizontal gradient */
-	/* stylelint-enable */
-
+	background-color: rgb(172, 163, 1);
 }
 
 .notifications-wrap .system-announcement-wrapper.warning {
-
-	/* Gradient via http://colorzilla.com/gradient-editor/#ffb81c+0,be860e+100 */
-	background: rgb(255, 184, 28); /* Old browsers */ /* FF3.6-15 */
-	background: linear-gradient(135deg, rgba(255, 184, 28, 1) 0%, rgba(190, 134, 14, 1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	/* stylelint-disable */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffb81c", endColorstr="#be860e", GradientType=1); /* IE6-9 fallback on horizontal gradient */
-	/* stylelint-enable */
-
+	background-color: rgba(255, 184, 28, 1);
 }
 
 .notifications-wrap .system-announcement-wrapper.emergency {
-
-	/* Gradient via http://colorzilla.com/gradient-editor/#f6861f+0,f6861f+100 */
-	background: rgb(246, 134, 31); /* Old browsers */ /* FF3.6-15 */
-	background: linear-gradient(135deg, rgba(246, 134, 31, 1) 0%, rgba(246, 134, 31, 1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	/* stylelint-disable */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f6861f", endColorstr="#f6861f", GradientType=1); /* IE6-9 fallback on horizontal gradient */
-	/* stylelint-enable */
+	background-color: rgb(246, 134, 31); 
 }
 
 .notifications-wrap .system-announcement-container {
-	width: 67%;
-	max-width: 640px;
-	margin-left: auto;
-	margin-right: auto;
+	width: 100%;
+	max-width: 900px;
+	max-width: 98ch;
 }
 
 .notifications-wrap .system-announcement-container header {
@@ -163,11 +147,24 @@ main ul li {
 }
 
 .notifications-wrap .system-announcement-container h1 {
-	font-size: 1.7em;
+	font-size: 1.3em;
+	line-height: 1.3;
 }
 
 .notifications-wrap .system-announcement-container p {
 	font-weight: 400;
+}
+
+.notifications-wrap .alert-content-area {
+	padding: 2rem 2rem 0rem 2rem;
+}
+
+.notifications-wrap .alert-content-area header {
+	margin-bottom: 1rem;
+}
+.notifications-wrap .alert-content-area .no-active-alerts {
+	padding-bottom: 0;
+	margin-bottom: 1rem;
 }
 
 /*******************
